add 2 examples. Working and Not Working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
-<button routerLink="/test">link1</button>
-<button routerLink="/test2">link2</button>
-<button routerLink="/test3">link3</button>
-<button routerLink="/test4">link4</button>
-
-
-<div class="cupertino-pane">
-  <h1>Header</h1>
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
+<div style="display: flex; justify-content: space-around">
+  <button routerLink="/working">WORKING EXAMPLE</button>
+  <button routerLink="/not-working">NOT WORKING EXAMPLE</button>
 </div>
+
+<router-outlet></router-outlet>
