--- a/src/app/not-working-example/not-working-test/not-working-test.component.html
+++ b/src/app/not-working-example/not-working-test/not-working-test.component.html
@@ -1,3 +1,8 @@
+<h2>
+  my header inside<br>
+</h2>
+<span style="font-size: 12px;">This header can be changed with the inner content 11.. When u change the page clicking on 'link' button, you'll notice that the scroll will stop work. Unless you refresh the page.</span>
+
 <div class="test-list" overflow-y>
   test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test works<br>test
   works<br>test
