--- a/src/app/not-working-example/not-working-test3/not-working-test3.component.html
+++ b/src/app/not-working-example/not-working-test3/not-working-test3.component.html
@@ -1,7 +1,20 @@
+<h2>
+  another header 3 here<br>
+</h2>
+<span style="font-size: 12px;">This header can be changed with the inner content 33</span>
+
 <div class="test33-list" overflow-y>
   test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
   works<br>test33
   works<br>test33
+  works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
+  works<br>test33 works<br>test33
+  works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
+  works<br>test33 works<br>test33
+  works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
+  works<br>test33 works<br>test33
+  works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
+  works<br>test33 works<br>test33
   works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
   works<br>test33 works<br>test33
   works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33 works<br>test33
