--- a/src/app/not-working-example/not-working-test2/not-working-test2.component.html
+++ b/src/app/not-working-example/not-working-test2/not-working-test2.component.html
@@ -1,3 +1,8 @@
+<h2>
+  my second header inside<br>
+</h2>
+<span style="font-size: 12px;">This header can be changed with the inner content 22</span>
+
 <div class="test-list" overflow-y>
   test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22 works<br>test22
   works<br>test
